feat: update message api
