# server/src/main/java/com/github/KinConnect/controllers/UserController.java
@@ -2,11 +2,12 @@ package com.github.KinConnect.controllers;
 
 import com.github.KinConnect.context.UserContext;
 import com.github.KinConnect.dto.Response;
+import com.github.KinConnect.entities.User;
 import com.github.KinConnect.exception.AppException;
 import com.github.KinConnect.services.UserService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -19,20 +20,22 @@ public class UserController {
 
     @PostMapping("/switch-role")
     public ResponseEntity<Response> switchRole() {
-        try {
-            UserContext.UserInfo currentUserInfo = UserContext.getCurrentUserInfo();
-            if (currentUserInfo == null) {
-                throw new AppException(400, "current userinfo is null", "user not logged in");
-            }
-            userService.switchRole(currentUserInfo.id());
-            return ResponseEntity.status(201).body(Response.builder().code(201).build());
-        } catch (AppException e) {
-            System.out.println(e.getLogMsg());
-            return ResponseEntity.status(e.getCode()).body(Response.builder().code(400).message(e.getDisplayMsg()).build());
-        } catch (Exception e) {
-            System.out.println(e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Response.unknownError());
+        UserContext.UserInfo currentUserInfo = UserContext.getCurrentUserInfo();
+        if (currentUserInfo == null) {
+            throw new AppException(400, "current userinfo is null", "user not logged in");
         }
+        userService.switchRole(currentUserInfo.id());
+        return ResponseEntity.status(201).body(Response.builder().code(201).build());
+    }
+
+    @GetMapping("/info")
+    public ResponseEntity<Response> info() {
+        UserContext.UserInfo currentUserInfo = UserContext.getCurrentUserInfo();
+        if (currentUserInfo == null) {
+            throw new AppException(400, "current userinfo is null", "user not logged in");
+        }
+        Long id = currentUserInfo.id();
+        User user = userService.getUser(id);
+
     }
 }
