# server/src/main/java/com/github/KinConnect/dto/user/UserInfoDto.java
@@ -1,0 +1,9 @@
+package com.github.KinConnect.dto.user;
+
+import java.util.List;
+
+public record UserInfoDto(Long id, String username, String email, Boolean isOld,
+                          UserInfoSimpleDto guardian,
+                          List<UserInfoSimpleDto> olds, Boolean isVerified) {
+}
+
