# server/src/main/java/com/github/KinConnect/dto/user/UserInfoSimpleDto.java
@@ -1,0 +1,5 @@
+package com.github.KinConnect.dto.user;
+
+public record UserInfoSimpleDto(Long id, String username, String email) {
+}
+    
